app/styles/main.scss
/* ... */
@mixin transform($transformations...) {
    -webkit-transform: $transformations;  /* Chrome, Opera 15+, Safari 3.1+ */
    -ms-transform: $transformations;  /* IE 9 */
    transform: $transformations;  /* Firefox 16+, IE 10+, Opera */
}
@mixin fixed-wood-bg () {
  background: url("../images/wood.png");
  background-attachment: fixed;
  background-position: center top;
  background-repeat: repeat;
}
@mixin white-wood-bg ($posX, $posY) {
  background: url("../images/wood-white.jpg");
  background-position: $posX $posY;
  background-size: 100%;
  background-repeat: repeat;
}
@mixin thin-white-bar ($margin) {
  background: url("../images/thin-white-bar.png") repeat-x left center;
  background-size: auto 100%;
  height: 68px;
  margin: $margin;
}

/**************************************
 Resets
 **************************************/
html,body,div,span,applet,object,
iframe,h1,h2,h3,h4,h5,h6,p,blockquote,
pre,a,abbr,acronym,address,big,cite,
code,del,dfn,em,img,ins,kbd,q,s,
samp,small,strike,strong,sub,sup,
tt,var,b,u,i,center,dl,dt,dd,
ol,ul,li,fieldset,form,label,legend,
table,caption,tbody,tfoot,thead,tr,th,td,
article,aside,canvas,details,embed,figure,
figcaption,footer,header,hgroup,menu,nav,output,
ruby,section,summary,time,mark,audio,video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  // vertical-align: baseline;
}
html {
  @include box-sizing(border-box);
}

*, *:before, *:after {
  @include box-sizing(inherit);
}

article,aside,details,figcaption,figure,
footer,header,hgroup,menu,nav,section {
  display: block;
}

body {
  font: 13px/1.1 Helvetica,sans-serif;
  text-align: center;
  font-family: 'BigMummy';
  -webkit-font-smoothing: antialiased;
  image-rendering: -webkit-optimize-contrast;
}
ol,ul {
  list-style: none;
}
table{
  border-collapse: collapse;
  border-spacing: 0;
}
p{
  line-height: 1.6;
}
a {
  text-align: center;
  text-transform: uppercase;
}
a,
a:visited,
a:hover,
a:active {
  color: #000;
  text-decoration: none;
}
img {
  width: 100%;
}

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}
textarea {
  outline: none; // remove blue glow
  overflow: auto; // remove IE scrollbars
}
/* Placeholer text color */
::-webkit-input-placeholder {
  color: silver;
}
:-moz-placeholder { /* Firefox 18- */
  color: silver;
}
::-moz-placeholder {  /* Firefox 19+ */
  color: silver;
}
:-ms-input-placeholder {
  color: silver;
}

/**************************************
 Helper Classes
 **************************************/
.table,
.table-cell {
    width: 100%;
    height: 100%;
}
.table {
    display: table;
}
.table-row {
  display: table-row;
}
.table-cell {
    display: table-cell;
    vertical-align: middle;
}
.anchor-scroll-tag {
  display: block;
  padding-top: $nav-bar-height;
  margin-top: -$nav-bar-height;
}
.div-frame-outer {
  display: table;
  border: 3px solid $white;
  padding: 3px;
  width: 100%;

  .div-frame-inner {
    display:table-cell;
    vertical-align: middle;
    text-align: center;
    background: $white;
  }
}

/**************************************
 Skrollr Parallax Helper Classes
 **************************************/
 #skrollr-body {
  // background: url("../images/wood-bg.jpg") repeat-x left top;
  // height: 100%;
}
// .skrollr-window {
//     position: relative;
//     width: 100% !important;
//     overflow: hidden;
// }
// .skrollr-layer {
//   position: absolute;
//   top: 0;
//   left: 0;
//   width: 100%;
//   height: 100%;
// }

/**************************************
 App Styles
 **************************************/
// Mobile Menu
#menu-icon {
  display: inline-block;
  position: absolute;
  top: 23px;
  right: 9px;
  width: 51px;
  cursor: pointer;
}
#mobile-slide-menu-con {
  z-index: 999;
  @include fixed-wood-bg ();
  background-size: 100%;
  position: absolute;
  top: 0;
  right: 0;
  padding: 50px 40px;
  width: 40%;
  height: 100%;

  li {
    cursor: pointer;
    margin-bottom: 30px;

    &:hover {
      color: $dark-brown;
    }
    .div-frame-outer {
      border-width: 2px;
      padding: 2px;

      .div-frame-inner {
        background: url(../images/service-link-bg.png) no-repeat center;
        background-size: 100% 100%;
      }
    }
  }
}
// Desktop Nav
nav#nav-outer {
  width: 100%;
  position: fixed;
  height: $nav-bar-height;
  z-index: 1;
  background: url("../images/nav-bg.png");
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-position: 50% 50%;
  background-color: #404040;

  #nav-inner {
    margin: 0 auto;
    min-width: 760px;
    width: 58%;
    height: 100%;

    // #logo  {
    //   width: 10px;
    //   display: inline-block;

    //   img {
    //     position: relative;
    //     top: 1px;
    //     vertical-align: middle;
    //   }
    // }

    ul.table {
      width: 60%;
      margin: 0 auto;
      border-collapse: separate;
      border-spacing: 20px;
      vertical-align: middle;

      li {
      vertical-align: middle;
        min-width: 110px;
        width: 25%;
        margin: 0 3px;

        #logo  img{width: 93%; position: relative; top: 2px;}
        span {
          display: block;
          padding: 2px 4px;
          // transparent border to stop text
          // from shifting upon hover state
          border: 3px solid transparent;
          @include transition (border-color 0.5s);
        }
        &:hover span {
          border-color: rgba(118, 101, 85, 1);
          @include transition (border 0.6s);
        }
      }
    }
    #menu-icon {
      display: none;
    }
    #menu-slide-menu-con {

    }
  }
}

#hero-section {
  #home-bg-con {
    background: url(../images/home-bg.jpg) no-repeat 50% 50%;
    background-size: 100% 100%;
  }
  #tag-line-con {
    background: url(../images/tag-line2.png) no-repeat center center;
    background-size: 100%;
  }
  #couple-con {
    background: url(../images/couple.png) no-repeat top left;
    background-size: 28%;
  }
}
/* ... */

